--- a/belajar-git1.html
+++ b/belajar-git1.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <P>belajar git pokoknya</P>
 </body>
 </html>
