second modified adding second news

--- a/belajar-git1.html
+++ b/belajar-git1.html
@@ -9,5 +9,13 @@
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <P>belajar git pokoknya</P>
-</body>
+    <div> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, quasi quos! Excepturi, numquam corporis eos vitae in temporibus
+        consequuntur delectus qui, explicabo rem et at sunt dolore, autem natus? Natus.</p>
+       <h2>Berita</h2>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet cupiditate distinctio soluta assumenda dolor molestiae dignissimos
+            iure quibusdam voluptas ex aliquid, adipisci fuga fugit earum illo consectetur nostrum, quod cum!</p></div>
+    <h2>Berita 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reiciendis dolores vel unde autem asperiores quae veritatis quisquam, et ipsam magni cumque modi 
+        saepe cupiditate provident tempora accusantium rem? Harum!</p>
+        </body>
 </html>
