--- a/belajar-git1.html
+++ b/belajar-git1.html
@@ -6,9 +6,9 @@
     <title>Belajar Git</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello Aja </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <P>belajar git pokoknya</P>
+    <P>belajar git </P>
     <div> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, quasi quos! Excepturi, numquam corporis eos vitae in temporibus
         consequuntur delectus qui, explicabo rem et at sunt dolore, autem natus? Natus.</p>
        <h2>Berita</h2>
