added third news

--- a/belajar-git1.html
+++ b/belajar-git1.html
@@ -17,5 +17,7 @@
     <h2>Berita 2</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reiciendis dolores vel unde autem asperiores quae veritatis quisquam, et ipsam magni cumque modi 
         saepe cupiditate provident tempora accusantium rem? Harum!</p>
+    <h3>Berita 3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aut perferendis id dolorem </p>
         </body>
 </html>
