initiate project for studies git

--- a/indexcss.html
+++ b/indexcss.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practice CSS</title>
 </head>
-
-<style>
-</style>
 <body>
-    <h1>Belajar Git</h1>
+    <head>
+        
+    </head>
 </body>
 </html>
